# personal-mcp-platform

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  registry.yaml
docker/: docker-compose.yml  nginx.conf
docs/: ARCHITECTURE.md  DEVELOPMENT.md  INSTALLATION.md  PROFILES.md  SECURITY.md  TROUBLESHOOTING.md  UPGRADE.md  USAGE.md  plano-descoberta-mcp.md
mcp_cli/: __init__.py  __main__.py
mcp_cli/commands/: benchmark.py  compose.py  config.py  discover.py  generate.py  health.py  install.py  logs.py  profile.py  project.py  registry_cmd.py  secrets.py  start_stop.py  update.py
mcp_cli/core/: config.py  discovery.py  generator.py  health.py  permissions.py  profiles.py  secrets.py  server_manager.py  transport.py  updater.py
scripts/: install.ps1  install.sh
tests/unit/: test_config.py  test_discovery.py  test_permissions.py  test_profiles.py  test_transport.py
