[project]
name = "mcp-platform"
version = "0.1.0"
description = "Personal AI Engineering Platform — Universal MCP Infrastructure"
requires-python = ">=3.11"
authors = [
    { name = "Brian Smith" },
]
dependencies = [
    "typer>=0.12.0",
    "pyyaml>=6.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "loguru>=0.7.0",
    "aiofiles>=24.0.0",
    "rich>=13.0.0",
]

[project.scripts]
mcp = "mcp_cli.__main__:app"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcp_cli*"]
